css/style.css
/* ... */
/* ======================================================================== DEV TEAM Extra styles ================= */

.admin-confirmto {background-color: #DAA520;padding:10px;margin:3px;-webkit-border-radius: 5px; -moz-border-radius: 5px;}
.h1-watermark { width: 100%; font-size: 16px; margin-top: 0.6em; margin-bottom: 0.6em; position: relative; margin-left: auto; margin-right: auto; text-align: center; background-color: #f00; padding-top: 0.4em; padding-bottom: 0.4em; padding-right: 4px; color: #fff; -webkit-border-radius: 5px; -moz-border-radius: 5px;}
.h1-watermark-admin { width: 100%; font-size: 16px; margin-top: 0.6em; margin-bottom: 0.6em; position: relative; margin-left: auto; margin-right: auto; text-align: center; background-color: #DAA520; padding-top: 0.4em; padding-bottom: 0.4em; padding-right: 4px; color: #fff; -webkit-border-radius: 5px; -moz-border-radius: 5px;}
.h1-watermark-description { width: 100%; font-size: 11px; margin-top: 0.6em; margin-bottom: 0.6em; position: relative; background-color: #ffc0cb; padding-top: 1.0em; padding-bottom: 1.0em; color: #666; padding-right: 4px; -webkit-border-radius: 5px; -moz-border-radius: 5px;}
.h1-watermark-description p { margin-left: 1em; }
#debug-info-modal { font-family:monospace;padding:15px;-webkit-border-radius: 5px; -moz-border-radius: 5px;}

.theatre-list-sort-placeholder { visibility: visible !important; float: left; height: 62px; }

#LoginForm_siteId { margin-top: 6px; position: absolute; right: 0; top: 0; width: 212px; }

.toAddress {padding-left:7em;}
.red { color: #f00; }

/* [NEW] colours for waiting list */
.waitinglistOdd{ background-color: #EDF4F9; border-bottom: 1px solid #CCD;}
.waitinglistEven{ background-color: #E1EEF9; border-bottom: 1px solid #CCD;}
.waitinglistPurple{ background-color: #77B8D3; }
.waitinglistGreen { background-color: #B8EAA6; }
.waitinglistRed{ background-color: #F08A6F; }
.waitinglistOrange{ background-color: #F7BF8D; }

/* colours for the audit list */
.auditlistOdd{ background-color: #EDF4F9; border-bottom: 1px solid #CCD;}
.auditlistEven{ background-color: #E1EEF9; border-bottom: 1px solid #CCD;}

.elements { margin-bottom: 20px; }
canvas { outline: none; }

ul.MultiSelectList { list-style-type: none; padding-left: 10px; }
div.MultiSelectList { background: #fff; }

label.error {color: red;}

#delete_event h1 { margin-left: 10px; }
#delete_event h2 { color: #f00; font-size: 16px; background: none; display: block; padding-left: 0; margin-left: 10px; padding-top: 20px;}

.goldenrod {background-color: goldenrod; width: 200px; padding: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px;}
.goldenrod > h4 {color: #000 !important;}

li.auditlistEven { user-select: none; -moz-user-select: none; -khtml-user-select:none; }
li.auditlistOdd { user-select: none; -moz-user-select: none; -khtml-user-select:none; }
li.auditlistEvenGreen { background-color: #c6ebb9; }
li.auditlistOddGreen { background-color: #e0f8d8; }
li.auditlistEvenRed { background-color: #eba694; }
li.auditlistOddRed { background-color: #e9c2b8; }

.waitinglistRed{ background-color: #F08A6F; }

ul#auditList { list-style: none; margin: 0; padding: 0;}
ul#auditList li { line-height: 32px; padding-left: 4px; }
ul#auditList li.header { font-weight: bold; margin-bottom: 0px; }
ul#auditList span { display: inline-block; }
ul#auditList span.timestamp { width:132px; }
ul#auditList span.site { width:192px; }
ul#auditList span.firm { width:160px; }
ul#auditList span.user { width:140px; }
ul#auditList span.action { width:105px; }
ul#auditList span.target { width:110px; }
ul#auditList span.event_type { width:110px; }
ul#auditList span.patient { width:205px; }
ul#auditList span.episode { width:55px; }
ul#auditList span.event { width:55px; }

div.auditDetailEven { display: inline-block; margin-left: 10px; margin-right: 10px; margin-top: 6px; margin-bottom: 6px !important; width: 96%; }
div.auditDetailOdd { display: inline-block; margin-left: 10px; margin-right: 10px; margin-top: 6px; margin-bottom: 6px !important; width: 96%; }
div.auditDetailEvenGreen { display: inline-block; margin-left: 10px; margin-right: 10px; margin-top: 6px; margin-bottom: 6px !important; width: 96%; }
div.auditDetailOddGreen { display: inline-block; margin-left: 10px; margin-right: 10px; margin-top: 6px; margin-bottom: 6px !important; width: 96%; }
div.auditDetailEvenRed { display: inline-block; margin-left: 10px; margin-right: 10px; margin-top: 6px; margin-bottom: 6px !important; width: 96%; }
div.auditDetailOddRed { display: inline-block; margin-left: 10px; margin-right: 10px; margin-top: 6px; margin-bottom: 6px !important; width: 96%; }

div.auditDetailEven div { line-height: 20px; }
div.auditDetailOdd div { line-height: 20px; }
div.auditDetailEvenGreen div { line-height: 20px; }
div.auditDetailOddGreen div { line-height: 20px; }
div.auditDetailEvenRed div { line-height: 20px; }
div.auditDetailOddRed div { line-height: 20px; }

span.auditDetailLabel { width: 100px; }

input.widgetSlider { vertical-align: middle; width: 770px; }
span.widgetSliderValue { vertical-align: middle; margin-right: 10px; width: 45px; display: inline-block; }

/* Temporary fix for OpNote post-op instructions dropbox resizing */
#div_ElementComments_postop_instructions_TextSelection select{width: 181px;}

div.DropDownLabelVertical { margin-bottom: 10px; }

div.patron { margin-left: 37em; font-size: 12pt; }

#auditListData { font-size: 12px; }

